fixed contrast ratio issue, transform lowered

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -5,7 +5,7 @@
 }
 
 .navbar__logo:hover {
-    transform: scale(1.5);
+    transform: scale(1.1);
 }
 
 .navbar__logo {
@@ -114,28 +114,28 @@
     font-size: 1.1rem;
     line-height: 1.5;
     max-width: 54rem;
-    color: #2b2b2b;
+    color: #000000;
     font-family: 'Roboto-Light', 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Oxygen',
         'Ubuntu', sans-serif;
     margin-bottom: 2rem;
 }
 
 .about__cv {
-    background-color: transparent;
     display: inline-block;
     padding: 0.75rem 1.5rem;
     font-size: 1rem;
-    color: #ffffff;
+    color: #000000;
     border-radius: 0.25rem;
     border: 1px solid #ffffff;
     cursor: pointer;
     transition: 175ms ease;
+    background-color: #ffffff;
 }
 
 .about__cv:hover {
     background-color: #ffffff;
-    color: #1a9be6;
-    transform: scale(1.5);
+    color: #000000;
+    transform: scale(1.1);
 }
 
 .about__breakdowns {
@@ -468,7 +468,7 @@
 .contact-form__submit:focus {
     background-color: #1a9be6;
     color: #ffffff;
-    transform: scale(1.5);
+    transform: scale(1.1);
 }
 
 @media screen and (min-width: 64rem) {
@@ -550,13 +550,13 @@
 .footer__social-btn:hover {
     background-color: #ffffff;
     color: #2196f3;
-    transform: scale(1.5);
+    transform: scale(1.2);
 }
 
 .footer__copyright {
     font-family: 'Roboto-Light', 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Oxygen',
         'Ubuntu', sans-serif;
-    color: #ffffff;
+    color: #000000;
 }
 
 .footer__policy {
@@ -564,7 +564,7 @@
     max-width: 40rem;
     text-align: center;
     margin-top: 1.5rem;
-    color: white;
+    color: #000000;
 }
 
 .notFound_home_link {
